<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kr.kdev.dg1s.Activity_Main">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/refreshicon"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_credits"
        android:icon="@drawable/acceptbtn"
        android:orderInCategory="1"
        android:title="@string/action_credits"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settingbtn"
        android:orderInCategory="10"
        android:title="@string/action_settings"
        app:showAsAction="always" />
</menu>
