<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical">

    <WebView
        android:id="@+id/webviewjongbum"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <ScrollView
        android:id="@+id/hwupldscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="9dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/hwupldtxt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/hwupldtxt" />

            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hwupldtxt1"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/gdspinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:entries="@array/selectGrade"
                    android:prompt="@string/promptGrade" />

                <Spinner
                    android:id="@+id/csspinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:entries="@array/selectClass"
                    android:prompt="@string/promptClass" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lay1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject" />

                <EditText
                    android:id="@+id/sbjttext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lay2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/desctext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:scrollHorizontally="true" />

            </LinearLayout>

            <TextView
                android:id="@+id/hwupldtxt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lay3"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/hwupld_due" />

            <DatePicker
                android:id="@+id/duedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hwupldtxt2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>