<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/card_background"
    android:padding="10dp">

    <ImageView
        android:id="@+id/mealIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/meal" />

    <TextView
        android:id="@+id/mealType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/mealIcon"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/mealIcon"
        android:gravity="center"
        android:text="@string/breakfast"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/mealTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/mealType"
        android:layout_below="@id/mealType"
        android:gravity="center"
        android:text="@string/time_breakfast"
        android:textColor="#666666"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/mealDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/mealType"
        android:layout_below="@id/mealTime"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/error_no_meal"
        android:textColor="#444444"
        android:textSize="13sp" />

</RelativeLayout>