<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hwitemback"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/homework_info"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/hwcontainer"
        android:gravity="left"
        android:padding="8dp"
        android:text="@string/error_no_description"
        android:textColor="#222222"
        android:textSize="11sp" />

    <RelativeLayout
        android:id="@+id/hwcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/subjectIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/subjects_etc" />

        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/subjectIcon"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/subjectIcon"
            android:gravity="center"
            android:text="@string/subject_others"
            android:textColor="#444444"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/dueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/subject"
            android:layout_below="@id/subject"
            android:gravity="center"
            android:text="@string/dummy_date"
            android:textColor="#666666"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#aaaaaa"
            android:gravity="center"
            android:padding="4dp">

            <TextView
                android:id="@+id/assigned_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dummy_assignedTo"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>