<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/title"
    android:layout_toEndOf="@id/icon"
    android:layout_toRightOf="@id/icon"
    android:animateLayoutChanges="true"
    android:divider="@drawable/separator"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        android:id="@+id/breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast"
            android:textColor="@color/black_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/breakfast_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/no_meal"
            android:textColor="@color/black_secondary"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch"
            android:textColor="@color/black_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lunch_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/no_meal"
            android:textColor="@color/black_secondary"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinner"
            android:textColor="@color/black_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dinner_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/no_meal"
            android:textColor="@color/black_secondary"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>